responsive and style update2

--- a/calculator.html
+++ b/calculator.html
@@ -24,6 +24,7 @@ body {
   margin-bottom:13px;
   margin-top:1em;
   position:relative;
+  background:rgb(40, 40, 40);
 }
 #currentInput {
   font-size:3em;
