--- a/calculator.html
+++ b/calculator.html
@@ -172,10 +172,12 @@ $(document).ready(function(){
         break;
       case ".":
         var currentInput =  $("#currentInput").text();
-        if(!currentInput.includes(char) && currentInput != ""){
-          $("#currentInput").append(char);
-        } else if (!currentInput.includes(char) && currentInput == ""){
-          $("#currentInput").append("0" + char);
+        if(!currentInput.includes(char)){
+            if(!currentInput.match(/[^0]/) || currentInput == ""){
+                $("#currentInput").text("0.");
+            } else {
+                $("#currentInput").append(char);
+            }            
         }
         break;
       case "+":
@@ -220,10 +222,12 @@ $(document).ready(function(){
       case 46:
         keyLight(char);
         var currentInput =  $("#currentInput").text();
-        if(!currentInput.includes(char) && currentInput != ""){
-          $("#currentInput").append(char);
-        } else if (!currentInput.includes(char) && currentInput == ""){
-          $("#currentInput").append("0" + char);
+        if(!currentInput.includes(char)){
+            if(!currentInput.match(/[^0]/) || currentInput == ""){
+                $("#currentInput").text("0.");
+            } else {
+                $("#currentInput").append(char);
+            }            
         }
         break;
       case 42:
